fix: scale board to fit viewport height on desktop monitors
The board was sized to 16:9 of the viewport width, so on screens shorter
than 16:9 (desktop monitors after browser chrome) it overflowed and the
hand row was cut off. Uniformly scale the board down to fit the viewport
height on wide (>=1700px) viewports, leaving laptops untouched.

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ main {
 	position:absolute;
 	width: 100%;
 	height: calc(100vw * 1080 / 1920);
+	transform-origin: top center;
 	background-image: url('img/board.jpg');
 	background-size: 100% auto;
 	background-repeat: no-repeat;
